k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsu-devops-python
spec:
  selector:
    app: devsu-devops-python
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: LoadBalancer
