k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devsu-devops-python
spec:
  rules:
    - host: devsu-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devsu-devops-python
                port:
                  number: 80
